src/main/java/org/tros/logo/antlr/logoParser.java
// Generated from logo.g4 by ANTLR 4.5
package org.tros.logo.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class logoParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
            T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
            T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
            T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
            T__73 = 74, HEX = 75, STRINGLITERAL = 76, STRING = 77, NUMBER = 78, COMMENT = 79,
            EOL = 80, WS = 81;
    public static final int RULE_prog = 0, RULE_line = 1, RULE_cmd = 2, RULE_procedureInvocation = 3,
            RULE_procedureDeclaration = 4, RULE_parameterDeclarations = 5, RULE_func = 6,
            RULE_repeat = 7, RULE_block = 8, RULE_ife = 9, RULE_comparison = 10, RULE_comparisonOperator = 11,
            RULE_make = 12, RULE_localmake = 13, RULE_print = 14, RULE_quotedstring = 15,
            RULE_name = 16, RULE_value = 17, RULE_parenExpression = 18, RULE_signExpression = 19,
            RULE_powerExpression = 20, RULE_multiplyingExpression = 21, RULE_expression = 22,
            RULE_deref = 23, RULE_fd = 24, RULE_bk = 25, RULE_rt = 26, RULE_lt = 27,
            RULE_cs = 28, RULE_pu = 29, RULE_pd = 30, RULE_ht = 31, RULE_st = 32,
            RULE_home = 33, RULE_stop = 34, RULE_setxy = 35, RULE_random = 36, RULE_getangle = 37,
            RULE_getx = 38, RULE_gety = 39, RULE_repcount = 40, RULE_fore = 41, RULE_pc = 42,
            RULE_cc = 43, RULE_hexcolor = 44, RULE_pause = 45, RULE_ds = 46, RULE_fontname = 47,
            RULE_fontsize = 48, RULE_fontstyle = 49, RULE_style = 50, RULE_number = 51,
            RULE_comment = 52;
    public static final String[] ruleNames = {
        "prog", "line", "cmd", "procedureInvocation", "procedureDeclaration",
        "parameterDeclarations", "func", "repeat", "block", "ife", "comparison",
        "comparisonOperator", "make", "localmake", "print", "quotedstring", "name",
        "value", "parenExpression", "signExpression", "powerExpression", "multiplyingExpression",
        "expression", "deref", "fd", "bk", "rt", "lt", "cs", "pu", "pd", "ht",
        "st", "home", "stop", "setxy", "random", "getangle", "getx", "gety", "repcount",
        "fore", "pc", "cc", "hexcolor", "pause", "ds", "fontname", "fontsize",
        "fontstyle", "style", "number", "comment"
    };

    private static final String[] _LITERAL_NAMES = {
        null, "'to'", "'end'", "':'", "','", "'repeat'", "'['", "']'", "'if'",
        "'<'", "'>'", "'='", "'!'", "'<='", "'>='", "'=='", "'!='", "'<>'", "'make'",
        "'localmake'", "'print'", "'('", "')'", "'+'", "'-'", "'^'", "'*'", "'/'",
        "'\\'", "'%'", "'fd'", "'forward'", "'bk'", "'backward'", "'back'", "'rt'",
        "'right'", "'lt'", "'left'", "'cs'", "'clearscreen'", "'cls'", "'clear'",
        "'pu'", "'penup'", "'pd'", "'pendown'", "'ht'", "'hideturtle'", "'st'",
        "'showturtle'", "'home'", "'stop'", "'setxy'", "'random'", "'getangle'",
        "'getx'", "'gety'", "'repcount'", "'for'", "'pc'", "'pencolor'", "'cc'",
        "'canvascolor'", "'#'", "'pause'", "'ds'", "'drawstring'", "'label'",
        "'fontname'", "'fontsize'", "'fontstyle'", "'bold'", "'plain'", "'italic'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, "HEX", "STRINGLITERAL", "STRING", "NUMBER", "COMMENT",
        "EOL", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "logo.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public logoParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {

        public List<LineContext> line() {
            return getRuleContexts(LineContext.class);
        }

        public LineContext line(int i) {
            return getRuleContext(LineContext.class, i);
        }

        public List<TerminalNode> EOL() {
            return getTokens(logoParser.EOL);
        }

        public TerminalNode EOL(int i) {
            return getToken(logoParser.EOL, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).enterProg(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).exitProg(this);
            }
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            int _alt;
            setState(118);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(106);
                        line();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(111);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1: {
                                    {
                                        setState(108);
                                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                                            case 1: {
                                                setState(107);
                                                line();
                                            }
                                            break;
                                        }
                                        setState(110);
                                        match(EOL);
                                    }
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(113);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                        } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                        setState(116);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__7) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (T__64 - 65)) | (1L << (T__65 - 65)) | (1L << (T__66 - 65)) | (1L << (T__67 - 65)) | (1L << (T__68 - 65)) | (1L << (T__69 - 65)) | (1L << (T__70 - 65)) | (1L << (STRING - 65)) | (1L << (COMMENT - 65)) | (1L << (EOL - 65)))) != 0)) {
                            {
                                setState(115);
                                line();
                            }
                        }

                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LineContext extends ParserRuleContext {

        public List<CmdContext> cmd() {
            return getRuleContexts(CmdContext.class);
        }

        public CmdContext cmd(int i) {
            return getRuleContext(CmdContext.class, i);
        }

        public CommentContext comment() {
            return getRuleContext(CommentContext.class, 0);
        }

        public PrintContext print() {
            return getRuleContext(PrintContext.class, 0);
        }

        public ProcedureDeclarationContext procedureDeclaration() {
            return getRuleContext(ProcedureDeclarationContext.class, 0);
        }

        public TerminalNode EOL() {
            return getToken(logoParser.EOL, 0);
        }

        public LineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_line;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).enterLine(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).exitLine(this);
            }
        }
    }

    public final LineContext line() throws RecognitionException {
        LineContext _localctx = new LineContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_line);
        int _la;
        try {
            setState(135);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(121);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(120);
                                    cmd();
                                }
                            }
                            setState(123);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__7) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (T__64 - 65)) | (1L << (T__65 - 65)) | (1L << (T__66 - 65)) | (1L << (T__67 - 65)) | (1L << (T__68 - 65)) | (1L << (T__69 - 65)) | (1L << (T__70 - 65)) | (1L << (STRING - 65)))) != 0));
                        setState(126);
                        _la = _input.LA(1);
                        if (_la == COMMENT) {
                            {
                                setState(125);
                                comment();
                            }
                        }

                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(128);
                        comment();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                     {
                        setState(129);
                        print();
                        setState(131);
                        _la = _input.LA(1);
                        if (_la == COMMENT) {
                            {
                                setState(130);
                                comment();
                            }
                        }

                    }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                     {
                        setState(133);
                        procedureDeclaration();
                    }
                    break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                     {
                        setState(134);
                        match(EOL);
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdContext extends ParserRuleContext {

        public RepeatContext repeat() {
            return getRuleContext(RepeatContext.class, 0);
        }

        public FdContext fd() {
            return getRuleContext(FdContext.class, 0);
        }

        public BkContext bk() {
            return getRuleContext(BkContext.class, 0);
        }

        public RtContext rt() {
            return getRuleContext(RtContext.class, 0);
        }

        public LtContext lt() {
            return getRuleContext(LtContext.class, 0);
        }

        public CsContext cs() {
            return getRuleContext(CsContext.class, 0);
        }

        public PuContext pu() {
            return getRuleContext(PuContext.class, 0);
        }

        public PdContext pd() {
            return getRuleContext(PdContext.class, 0);
        }

        public HtContext ht() {
            return getRuleContext(HtContext.class, 0);
        }

        public StContext st() {
            return getRuleContext(StContext.class, 0);
        }

        public HomeContext home() {
            return getRuleContext(HomeContext.class, 0);
        }

        public SetxyContext setxy() {
            return getRuleContext(SetxyContext.class, 0);
        }

        public MakeContext make() {
            return getRuleContext(MakeContext.class, 0);
        }

        public LocalmakeContext localmake() {
            return getRuleContext(LocalmakeContext.class, 0);
        }

        public ProcedureInvocationContext procedureInvocation() {
            return getRuleContext(ProcedureInvocationContext.class, 0);
        }

        public IfeContext ife() {
            return getRuleContext(IfeContext.class, 0);
        }

        public StopContext stop() {
            return getRuleContext(StopContext.class, 0);
        }

        public ForeContext fore() {
            return getRuleContext(ForeContext.class, 0);
        }

        public PcContext pc() {
            return getRuleContext(PcContext.class, 0);
        }

        public CcContext cc() {
            return getRuleContext(CcContext.class, 0);
        }

        public PauseContext pause() {
            return getRuleContext(PauseContext.class, 0);
        }

        public DsContext ds() {
            return getRuleContext(DsContext.class, 0);
        }

        public FontsizeContext fontsize() {
            return getRuleContext(FontsizeContext.class, 0);
        }

        public FontstyleContext fontstyle() {
            return getRuleContext(FontstyleContext.class, 0);
        }

        public FontnameContext fontname() {
            return getRuleContext(FontnameContext.class, 0);
        }

        public PrintContext print() {
            return getRuleContext(PrintContext.class, 0);
        }

        public CmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).enterCmd(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).exitCmd(this);
            }
        }
    }

    public final CmdContext cmd() throws RecognitionException {
        CmdContext _localctx = new CmdContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_cmd);
        try {
            setState(163);
            switch (_input.LA(1)) {
                case T__4:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(137);
                        repeat();
                    }
                    break;
                case T__29:
                case T__30:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(138);
                        fd();
                    }
                    break;
                case T__31:
                case T__32:
                case T__33:
                    enterOuterAlt(_localctx, 3);
                     {
                        setState(139);
                        bk();
                    }
                    break;
                case T__34:
                case T__35:
                    enterOuterAlt(_localctx, 4);
                     {
                        setState(140);
                        rt();
                    }
                    break;
                case T__36:
                case T__37:
                    enterOuterAlt(_localctx, 5);
                     {
                        setState(141);
                        lt();
                    }
                    break;
                case T__38:
                case T__39:
                case T__40:
                case T__41:
                    enterOuterAlt(_localctx, 6);
                     {
                        setState(142);
                        cs();
                    }
                    break;
                case T__42:
                case T__43:
                    enterOuterAlt(_localctx, 7);
                     {
                        setState(143);
                        pu();
                    }
                    break;
                case T__44:
                case T__45:
                    enterOuterAlt(_localctx, 8);
                     {
                        setState(144);
                        pd();
                    }
                    break;
                case T__46:
                case T__47:
                    enterOuterAlt(_localctx, 9);
                     {
                        setState(145);
                        ht();
                    }
                    break;
                case T__48:
                case T__49:
                    enterOuterAlt(_localctx, 10);
                     {
                        setState(146);
                        st();
                    }
                    break;
                case T__50:
                    enterOuterAlt(_localctx, 11);
                     {
                        setState(147);
                        home();
                    }
                    break;
                case T__52:
                    enterOuterAlt(_localctx, 12);
                     {
                        setState(148);
                        setxy();
                    }
                    break;
                case T__17:
                    enterOuterAlt(_localctx, 13);
                     {
                        setState(149);
                        make();
                    }
                    break;
                case T__18:
                    enterOuterAlt(_localctx, 14);
                     {
                        setState(150);
                        localmake();
                    }
                    break;
                case STRING:
                    enterOuterAlt(_localctx, 15);
                     {
                        setState(151);
                        procedureInvocation();
                    }
                    break;
                case T__7:
                    enterOuterAlt(_localctx, 16);
                     {
                        setState(152);
                        ife();
                    }
                    break;
                case T__51:
                    enterOuterAlt(_localctx, 17);
                     {
                        setState(153);
                        stop();
                    }
                    break;
                case T__58:
                    enterOuterAlt(_localctx, 18);
                     {
                        setState(154);
                        fore();
                    }
                    break;
                case T__59:
                case T__60:
                    enterOuterAlt(_localctx, 19);
                     {
                        setState(155);
                        pc();
                    }
                    break;
                case T__61:
                case T__62:
                    enterOuterAlt(_localctx, 20);
                     {
                        setState(156);
                        cc();
                    }
                    break;
                case T__64:
                    enterOuterAlt(_localctx, 21);
                     {
                        setState(157);
                        pause();
                    }
                    break;
                case T__65:
                case T__66:
                case T__67:
                    enterOuterAlt(_localctx, 22);
                     {
                        setState(158);
                        ds();
                    }
                    break;
                case T__69:
                    enterOuterAlt(_localctx, 23);
                     {
                        setState(159);
                        fontsize();
                    }
                    break;
                case T__70:
                    enterOuterAlt(_localctx, 24);
                     {
                        setState(160);
                        fontstyle();
                    }
                    break;
                case T__68:
                    enterOuterAlt(_localctx, 25);
                     {
                        setState(161);
                        fontname();
                    }
                    break;
                case T__19:
                    enterOuterAlt(_localctx, 26);
                     {
                        setState(162);
                        print();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProcedureInvocationContext extends ParserRuleContext {

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public ProcedureInvocationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_procedureInvocation;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).enterProcedureInvocation(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).exitProcedureInvocation(this);
            }
        }
    }

    public final ProcedureInvocationContext procedureInvocation() throws RecognitionException {
        ProcedureInvocationContext _localctx = new ProcedureInvocationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_procedureInvocation);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(165);
                name();
                setState(169);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__20) | (1L << T__22) | (1L << T__23) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57))) != 0) || _la == NUMBER) {
                    {
                        {
                            setState(166);
                            expression();
                        }
                    }
                    setState(171);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProcedureDeclarationContext extends ParserRuleContext {

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public List<ParameterDeclarationsContext> parameterDeclarations() {
            return getRuleContexts(ParameterDeclarationsContext.class);
        }

        public ParameterDeclarationsContext parameterDeclarations(int i) {
            return getRuleContext(ParameterDeclarationsContext.class, i);
        }

        public List<TerminalNode> EOL() {
            return getTokens(logoParser.EOL);
        }

        public TerminalNode EOL(int i) {
            return getToken(logoParser.EOL, i);
        }

        public List<LineContext> line() {
            return getRuleContexts(LineContext.class);
        }

        public LineContext line(int i) {
            return getRuleContext(LineContext.class, i);
        }

        public ProcedureDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_procedureDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).enterProcedureDeclaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof logoListener) {
                ((logoListener) listener).exitProcedureDeclaration(this);
            }
        }
    }

    public final ProcedureDeclarationContext procedureDeclaration() throws RecognitionException {
        ProcedureDeclarationContext _localctx = new ProcedureDeclarationContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_procedureDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                match(T__0);
                setState(173);
                name();
                setState(177);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(174);
                            parameterDeclarations();
                        }
                    }
                    setState(179);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(181);
                switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                    case 1: {
                        setState(180);
                        match(EOL);
                    }
                    break;
                }
                setState(187);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(184);
                            switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                                case 1: {
                                    setState(183);
                                    line();
                                }
                                break;
                            }
                            setState(186);
                            match(EOL);
                        }
                    }
                    setState(189);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__7) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (T__64 - 65)) | (1L << (T__65 - 65)) | (1L << (T__66 - 65)) | (1L << (T__67 - 65)) | (1L << (T__68 - 65)) | (1L << (T__69 - 65)) | (1L << (T__70 - 65)) | (1L << (STRING - 65)) | (1L << (COMMENT - 65)) | (1L << (EOL - 65)))) != 0));
                setState(191);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterDeclarationsContext extends ParserRuleContext {

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public List<ParameterDeclarationsContext> parameterDeclarations() {
            return getRuleContexts(ParameterDeclarationsContext.class);
        }

        public ParameterDeclarationsContext parameterDeclarations(int i) {
            return getRuleContext(ParameterDeclarationsContext.class, i);
        }
